--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,19 +25,19 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="/assets/lib/fav-d.png" />
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/lib/fav-d.png" />
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link type="text/css" rel="stylesheet" href="/assets/lib/normalize.css" />
-  <link type="text/css" rel="stylesheet" href="/assets/lib/loading.css" />
-  <link type="text/css" rel="stylesheet" href="/assets/lib/main.css" />
-  <link type="text/css" rel="stylesheet" href="/assets/fonts/sailec/style.css" />
+    <link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/assets/lib/normalize.css" />
+  <link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/assets/lib/loading.css" />
+  <link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/assets/lib/main.css" />
+  <link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/assets/fonts/sailec/style.css" />
   {% if page.assets %}
   <link
     type="text/css"
     rel="stylesheet"
-    href="/assets/lib/{{ page.assets }}.css"
+    href="{{ site.baseurl }}/assets/lib/{{ page.assets }}.css"
   />
   {% endif %}
   <link rel="preconnect" href="https://fonts.gstatic.com" />
